--- a/barbershop/shop.html
+++ b/barbershop/shop.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Барбершоп «Бородинский»</title>
+  <title> Магазин Барбершоп «Бородинский»</title>
 </head>
 <body>
   <header class="main-header">
     <div class="container">
       <div class="top-logo">
-        <a href="">
+        <a href="index.html">
           <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
       </div>
@@ -23,10 +23,10 @@
             <a href="#">Новости</a>
           </li>
           <li>
-            <a href="#">Прайс-лист</a>
+            <a href="price-list.html">Прайс-лист</a>
           </li>
           <li>
-            <a href="#">Магазин</a>
+            <a class="active">Магазин</a>
           </li>
           <li>
             <a href="#">Контакты</a>
@@ -42,120 +42,115 @@
     <h1>Средства для ухода</h1>
     <div class="breadcrumbs">
       <ul>
-        <li><a href="">Глвная</a></li>
-        <li><a href="">Магазин</a></li>
-        <li><a href="">Средства для ухода</a></li>
+        <li><a href="index.ru">Глвная</a></li>
+        <li><a href="shop.html">Магазин</a></li>
+        <li>Средства для ухода</li>
       </ul>
     </div>
     <div class="sidebar">
-      <h3>ПРОИЗВОДИТЕЛИ:</h3>
-      <label><input type="checkbox" > Baxter of California</label>
-      <label><input type="checkbox" >American Crew</label>
-      <label><input type="checkbox" >Suavecito</label>
-      <label><input type="checkbox" >Malin+Goetz</label>
-      <label><input type="checkbox" > Murray’s</label>
-      <label><input type="checkbox" > American Crew</label>
-      <h3>ГРУППЫ ТОВАРОВ:</h3>
-      <label><input type="radio" name="gr" value="gr1"> Бритвенные  принадлежности</label>
-      <label><input type="radio" name="gr" value="gr2"> Средства для ухода</label>
-      <label><input type="radio" name="gr" value="gr3"> Аксессуары</label>
-      <button class="btn" type="submit">Показать</button>
-      
+      <form action="shop.html">
+        <fieldset>
+          <legend>Производители:</legend>
+          <label><input type="checkbox" name="brand-1" value="Baxter of California">Baxter of California</label>
+          <label><input type="checkbox" name="brand-2" value="American Crew">American Crew</label>
+          <label><input type="checkbox" name="brand-3" value="Suavecito">Suavecito</label>
+          <label><input type="checkbox" name="brand-4" value="Malin+Goetz">Malin+Goetz</label>
+          <label><input type="checkbox" name="brand-5" value="Murray’s">Murray’s</label>
+          <label><input type="checkbox" name="brand-6" value="American Crew">American Crew</label>
+        </fieldset>
+        <fieldset>
+          <legend>Группы товаров:</legend>
+          <label><input type="radio" name="gr" value="gr1"> Бритвенные  принадлежности</label>
+          <label><input type="radio" name="gr" value="gr2"> Средства для ухода</label>
+          <label><input type="radio" name="gr" value="gr3"> Аксессуары</label>
+        </fieldset>
+        <button class="btn" type="submit">Показать</button>
+      </form>
     </div>
-    <section class="products">
-      <div class="products-item">
-        <figure class="product-img">
-<<<<<<< HEAD
-          <img src="img/product-1.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-=======
-          <img src="img/img.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
->>>>>>> af95473e405be3d41d039aec7111f85048f65c59
-        </figure>
-        <p class="product-name">Набор для бритья «Baxter of California»</p>
-        <div class="btn-buy">
-          <p><span class="price">2 900 РУБ.</span></p>
-          <button class="btn" type="submit">Купить</button>
+    <div class="products">
+      <div class="products-list">
+        <div class="products-item">
+          <a href="#">
+            <figure class="product-img">
+              <img src="img/product-1.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+            </figure>
+            <p class="product-name">Набор для бритья «Baxter of California»</p>
+          </a>
+          <div class="btn-buy">
+            <p class="price">2 900 &#8381;</p>
+            <a href="#" class="btn">Купить</a>
+          </div>
+        </div>
+        <div class="products-item">
+          <a href="#">
+            <figure class="product-img">
+              <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+            </figure>
+            <p class="product-name">Увлажняющий кондиционер  «Baxter of California»</p>
+          </a>
+          <div class="btn-buy">
+            <p class="price">750 &#8381;</p>
+            <a href="#" class="btn">Купить</a>
+          </div>
+        </div>
+        <div class="products-item">
+          <a href="#">
+            <figure class="product-img">
+              <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
+            </figure>
+            <p class="product-name">Гель для волос «SUAVECITO»</p>
+          </a>
+          <div class="btn-buy">
+            <p class="price">2 900 &#8381;</p>
+            <a href="#" class="btn">Купить</a>
+          </div>
+        </div>
+        <div class="products-item">
+          <a href="#">
+            <figure class="product-img">
+              <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос  «American crew»">
+            </figure>
+            <p class="product-name">Глина для укладки волос  «American crew»</p>
+          </a>
+          <div class="btn-buy">
+            <p class="price">500 &#8381;</p>
+            <a href="#" class="btn">Купить</a>
+          </div>
+        </div>
+        <div class="products-item">
+          <a href="#">
+            <figure class="product-img">
+              <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
+            </figure>
+            <p class="product-name">Гель для волос «AMERICAN CREW»</p>
+          </a>
+          <div class="btn-buy">
+            <p class="price">300 &#8381;</p>
+            <a href="#" class="btn">Купить</a>
+          </div>
+        </div>
+        <div class="products-item">
+          <a href="#">
+            <figure class="product-img">
+              <img src="img/product-6.jpg" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
+            </figure>
+            <p class="product-name">Набор для путешествий  «Baxter of California»</p>
+          </a>
+          <div class="btn-buy">
+            <p class="price">3 900 &#8381;</p>
+            <a href="#" class="btn">Купить</a>
+          </div>
         </div>
       </div>
-      <div class="products-item">
-        <figure class="product-img">
-<<<<<<< HEAD
-          <img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер  «Baxter of California»">
-=======
-          <img src="img/img.jpg" width="220" height="165" alt="Увлажняющий кондиционер  «Baxter of California»">
->>>>>>> af95473e405be3d41d039aec7111f85048f65c59
-        </figure>
-        <p class="product-name">Увлажняющий кондиционер  «Baxter of California»</p>
-        <div class="btn-buy">
-          <p><span class="price">750 РУБ.</span></p>
-          <button class="btn" type="submit">Купить</button>
-        </div>
-      </div>
-      <div class="products-item">
-        <figure class="product-img">
-<<<<<<< HEAD
-          <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
-=======
-          <img src="img/img.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
->>>>>>> af95473e405be3d41d039aec7111f85048f65c59
-        </figure>
-        <p class="product-name">Гель для волос «SUAVECITO»</p>
-        <div class="btn-buy">
-          <p><span class="price">2 90 РУБ.</span></p>
-          <button class="btn" type="submit">Купить</button>
-        </div>
-      </div>
-      <div class="products-item">
-        <figure class="product-img">
-<<<<<<< HEAD
-          <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос  «American crew»">
-=======
-          <img src="img/img.jpg" width="220" height="165" alt="Глина для укладки волос  «American crew»">
->>>>>>> af95473e405be3d41d039aec7111f85048f65c59
-        </figure>
-        <p class="product-name">Глина для укладки волос  «American crew»</p>
-        <div class="btn-buy">
-          <p><span class="price">500 РУБ.</span></p>
-          <button class="btn" type="submit">Купить</button>
-        </div>
-      </div>
-      <div class="products-item">
-        <figure class="product-img">
-<<<<<<< HEAD
-          <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
-=======
-          <img src="img/img.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
->>>>>>> af95473e405be3d41d039aec7111f85048f65c59
-        </figure>
-        <p class="product-name">Гель для волос «AMERICAN CREW»</p>
-        <div class="btn-buy">
-          <p><span class="price">300 РУБ.</span></p>
-          <button class="btn" type="submit">Купить</button>
-        </div>
-      </div>
-      <div class="products-item">
-        <figure class="product-img">
-<<<<<<< HEAD
-          <img src="img/product-6.jpg" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
-=======
-          <img src="img/img.jpg" width="220" height="165" alt="Набор для путешествий  «Baxter of California»">
->>>>>>> af95473e405be3d41d039aec7111f85048f65c59
-        </figure>
-        <p class="product-name">Набор для путешествий  «Baxter of California»</p>
-        <div class="btn-buy">
-          <p><span class="price">3 900 РУБ.</span></p>
-          <button class="btn" type="submit">Купить</button>
-        </div>
-      </div>
-      <nav>
-        <ul class="pagination">
-          <li><a href="">1</a></li>
-          <li><a href="">2</a></li>
-          <li><a href="">3</a></li>
-          <li><a href="">4</a></li>
+      <nav class="pagination">
+        <ul>
+          <li><a class="btn" href="">1</a></li>
+          <li><a class="btn active">2</a></li>
+          <li><a class="btn" href="">3</a></li>
+          <li><a class="btn" href="">4</a></li>
         </ul>
       </nav>
-    </section>
+    </div>
   </main>
   <footer class="main-footer">
       <div class="container">
@@ -167,9 +162,9 @@
           </div>
           <div class="footer-social">
             <p>Давайте дружить!</p>
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            <a class="social-btn btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn btn social-btn-inst" href="#">Инстаграм</a>
           </div>
           <div class="footer-copyright">
             <p>Разработано:</p>
@@ -178,22 +173,19 @@
       </div>
   </footer>
   <div class="login-form popup">
-    <form action="shop.html">
-      <h3>ЛИЧНЫЙ КАБИНЕТ</h3>
+    <form action="index.html">
+      <h3 class="txt-caption">ЛИЧНЫЙ КАБИНЕТ</h3>
       <p>Введите пожалуйста свой логин и пароль</p>
       <input type="text" placeholder="Логин">
       <input type="password" placeholder="Пароль">
-      <label ><input type="checkbox"> ЗАПОМНИТЕ МЕНЯ</label>
-      <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
-      <button class="btn" type="submit">ВОЙТИ</button>
+      <div class="login-save">
+        <label><input type="checkbox"> ЗАПОМНИТЕ МЕНЯ</label>
+        <a href="#">Я ЗАБЫЛ ПАРОЛЬ!</a>
+      </div>
+      <button class="btn btn-box" type="submit">ВОЙТИ</button>
     </form>
   </div>
-<<<<<<< HEAD
-  <div class="map">
-    <img src="img/map.jpg" width="766" height="560" alt="ул. Большая Конюшенная 19">
+  <div class="map popup">
   </div>
-=======
-  <div class="map popup"></div>
->>>>>>> af95473e405be3d41d039aec7111f85048f65c59
 </body>
 </html>
